<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameForgotPassword"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signup.Sign_up"
    style="@style/groupStylewhite_A700">

    <LinearLayout android:id="@+id/linearColumnarrowleft"
        android:layout_gravity="top|center"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_20pxv"
        android:layout_marginEnd="@dimen/_36pxh"
        android:layout_marginStart="@dimen/_36pxh"
        android:layout_marginTop="@dimen/_10pxv"
        android:layout_width="match_parent" android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:id="@+id/linearRowlogin"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/linearRowarrowleft"
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_weight="0.52"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageArrowleft"
                        android:layout_width="@dimen/_6pxh"
                        android:layout_height="@dimen/_11pxh"
                        android:layout_marginTop="@dimen/_4pxv"
                        android:layout_marginBottom="@dimen/_4pxv"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_arrowleft"
                        tools:ignore="ContentDescription"
                        tools:src="@drawable/img_arrowleft" />

                    <TextView
                        android:id="@+id/txtBack"
                        style="@style/txtPoppinsregular14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_4pxh"
                        android:layout_weight="0.84"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@string/lbl_back"/>
                </LinearLayout>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLogIn"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_200pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.48"
                    android:layout_width="0dp"
                    android:singleLine="true"
                    android:text="@string/lbl_log_in2"
                    style="@style/txtPoppinsregular14" tools:text="@string/msg_sign_up"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <EditText
            android:background="@drawable/rectangle_bg_gray_200_radius_20"
            android:ellipsize="end"
            android:hint="@string/fullname"
            android:id="@+id/Name"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_18pxv"
            android:singleLine="true"
            android:textColorHint="@color/bluegray_400"
            style="@style/etSolidRounded" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_bg_gray_200_radius_20"
            android:ellipsize="end"
            android:hint="@string/lbl_your_email"
            android:id="@+id/Email"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_18pxv"
            android:singleLine="true"
            android:textColorHint="@color/bluegray_400"
            style="@style/etSolidRounded" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_bg_gray_200_radius_20"
            android:ellipsize="end"
            android:hint="@string/address"
            android:id="@+id/Address"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_18pxv"
            android:singleLine="true"
            android:textColorHint="@color/bluegray_400"
            style="@style/etSolidRounded" tools:ignore="Autofill"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10pxv">

            <EditText
                android:background="@drawable/rectangle_bg_gray_200_radius_20"
                android:ellipsize="end"
                android:hint="@string/mobile"
                android:id="@+id/Mobile"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:layout_width="@dimen/_250pxh"
                android:paddingBottom="@dimen/_18pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_16pxh"
                android:paddingTop="@dimen/_17pxv"
                android:singleLine="true"
                android:textColorHint="@color/bluegray_400"
                style="@style/etSolidRounded" tools:ignore="Autofill"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sendcode"
                style="@style/btnSolidRounded_2"
                android:textSize="10sp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40pxh"
                android:layout_marginStart="@dimen/_5pxh"
                android:ellipsize="end"
                android:gravity="center"
                android:paddingStart="@dimen/_5pxh"
                android:paddingTop="@dimen/_5pxv"
                android:paddingEnd="@dimen/_5pxh"
                android:paddingBottom="@dimen/_5pxv"
                android:singleLine="true"
                android:text="@string/sendcode"
                android:textAllCaps="false" />

            <TextView
                android:id="@id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginLeft="15dp"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:visibility="gone">

            </TextView>
        </LinearLayout>


        <EditText
            android:background="@drawable/rectangle_bg_gray_200_radius_20"
            android:ellipsize="end"
            android:hint="@string/otp_verification"
            android:id="@+id/code"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_17pxv"
            android:singleLine="true"
            android:textColorHint="@color/bluegray_400"
            style="@style/etSolidRounded" tools:ignore="Autofill"/>

        <EditText
            android:background="@drawable/rectangle_bg_gray_200_radius_20"
            android:ellipsize="end"
            android:hint="@string/pass"
            android:id="@+id/pass"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_17pxv"
            android:singleLine="true"
            android:textColorHint="@color/bluegray_400"
            style="@style/etSolidRounded" tools:ignore="Autofill"/>

        <EditText
            android:background="@drawable/rectangle_bg_gray_200_radius_20"
            android:ellipsize="end"
            android:hint="@string/repass"
            android:id="@+id/repass"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_17pxv"
            android:singleLine="true"
            android:textColorHint="@color/bluegray_400"
            style="@style/etSolidRounded" tools:ignore="Autofill"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_25pxh">

            <CheckBox
                android:id="@+id/cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                style="@style/txtPoppinsregular14"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/_10pxh"
                android:cursorVisible="false"
                android:ellipsize="end"
                android:focusable="false"
                android:gravity="center"
                android:inputType="none"
                android:singleLine="true"
                android:text="@string/policy"
                tools:text="@string/policy" />
        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnSignup"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_15pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_15pxv"
            android:singleLine="true"
            android:text="@string/msg_sign_up"
            android:textAllCaps="false"
            style="@style/btnSolidRounded_1" />
    </LinearLayout>

</FrameLayout>