<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/groupStylewhite_A700"
    tools:context=".ui.login.Activity_login">


    <LinearLayout android:id="@+id/linearColumnarrowleft"
        android:layout_gravity="center"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_40pxv"
        android:layout_marginEnd="@dimen/_36pxh"
        android:layout_marginStart="@dimen/_36pxh"
        android:layout_marginTop="@dimen/_40pxv"
        android:layout_width="match_parent" android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:id="@+id/linearRowlogin"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/linearRowarrowleft"
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_weight="0.52"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageArrowleft"
                        android:layout_width="@dimen/_6pxh"
                        android:layout_height="@dimen/_11pxh"
                        android:layout_marginTop="@dimen/_4pxv"
                        android:layout_marginBottom="@dimen/_4pxv"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_arrowleft"
                        tools:ignore="ContentDescription"
                        tools:src="@drawable/img_arrowleft" />

                    <TextView
                        android:id="@+id/txtBack"
                        style="@style/txtPoppinsregular14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_4pxh"
                        android:layout_weight="0.84"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@string/lbl_back"/>
                </LinearLayout>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLogIn"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_200pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.48"
                    android:layout_width="0dp"
                    android:singleLine="true"
                    android:text="@string/lbl_log_in2"
                    style="@style/txtPoppinsregular14" tools:text="@string/msg_sign_up"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/imageNext"
            android:layout_width="357dp"
            android:layout_height="142dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_60pxv"
            android:layout_marginEnd="@dimen/_10pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_next" />

        <com.google.android.material.textfield.TextInputEditText
            android:background="@drawable/rectangle_bg_gray_200_radius_20"
            android:ellipsize="end"
            android:hint="@string/lbl_your_email"
            android:id="@+id/txtemail"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_59pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_17pxv"
            android:singleLine="true"
            android:textColorHint="@color/bluegray_400"
            style="@style/etSolidRounded" tools:ignore="Autofill"/>
        <com.google.android.material.textfield.TextInputEditText
            android:background="@drawable/rectangle_bg_gray_200_radius_20"
            android:ellipsize="end"
            android:hint="@string/lbl_password"
            android:id="@+id/txtpassword"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_17pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_18pxv"
            android:singleLine="true"
            android:textColorHint="@color/bluegray_400"
            style="@style/etSolidRounded" tools:ignore="Autofill"/>
        />
        <!--        <EditText
                    android:background="@drawable/rectangle_bg_gray_200_radius_20"
                    android:ellipsize="end"
                    android:hint="@string/lbl_password"
                    android:id="@+id/txtpassword"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_17pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_16pxh"
                    android:paddingTop="@dimen/_18pxv"
                    android:singleLine="true"
                    android:textColorHint="@color/bluegray_400"
                    style="@style/etSolidRounded" tools:ignore="Autofill"/>-->
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnLogin"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_15pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_15pxv"
            android:singleLine="true"
            android:text="@string/lbl_login"
            android:textAllCaps="false"
            style="@style/btnSolidRounded_1" tools:text="@string/lbl_login"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtForgotPassword"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_64pxh"
            android:layout_marginStart="@dimen/_64pxh"
            android:layout_marginTop="@dimen/_17pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:inputType="none"
            android:focusable="false"
            android:cursorVisible="false"
            android:text="@string/msg_forgot_password"
            style="@style/txtPoppinsregular14" tools:text="@string/msg_forgot_password"/>

        <LinearLayout android:id="@+id/linearRowlineone"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5pxh"
            android:layout_marginStart="@dimen/_6pxh"
            android:layout_marginTop="@dimen/_32pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <View android:background="@color/gray_200"
                android:id="@+id/lineLineOne"
                android:layout_height="@dimen/_2pxv"
                android:layout_marginBottom="@dimen/_8pxv"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_weight="0.47" android:layout_width="0dp"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtOr"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_17pxh"
                android:layout_weight="0.06"
                android:layout_width="0dp" android:singleLine="true"
                android:text="Or"
                style="@style/txtPoppinsregular14_2" tools:text="@string/lbl_or"/>
            <View android:background="@color/gray_200"
                android:id="@+id/lineLineTwo"
                android:layout_height="@dimen/_2pxv"
                android:layout_marginBottom="@dimen/_8pxv"
                android:layout_marginStart="@dimen/_17pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_weight="0.47" android:layout_width="0dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="@dimen/_5pxv">

            <ImageView
                android:id="@+id/phone"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5pxv"
                android:scaleType="fitXY"
                android:src="@drawable/phone" />

            <ImageView
                android:id="@+id/google"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_25pxh"
                android:layout_marginTop="@dimen/_5pxv"
                android:scaleType="fitXY"
                android:src="@drawable/googleg_standard_color_18" />

            <ImageView
                android:id="@+id/facebook"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_25pxh"
                android:layout_marginTop="@dimen/_5pxv"
                android:scaleType="fitXY"
                android:src="@drawable/fb" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_50pxh">

            <TextView
                style="@style/txtPoppinsregular14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:cursorVisible="false"
                android:layout_marginStart="@dimen/_10pxh"
                android:ellipsize="end"
                android:focusable="false"
                android:inputType="none"
                android:singleLine="true"
                android:text="@string/msg_don_have_acc"
                tools:text="@string/msg_don_have_acc" />

            <TextView
                android:id="@+id/signup"
                style="@style/txtPoppinsregular14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/_10pxh"
                android:cursorVisible="false"
                android:ellipsize="end"
                android:focusable="false"
                android:inputType="none"
                android:singleLine="true"
                android:text="@string/msg_sign_up"
                android:textStyle="bold"
                tools:text="@string/msg_sign_up" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>